--- a/index.html
+++ b/index.html
@@ -54,9 +54,11 @@
     <section class="section-letter">
         <h2 class="section-letter-head">ПИСЬМО ЛИЧНО ДИРЕКТОРУ</h2>
         <form class="letter" action="#" method="post">
-            <input type="tel" class="letter-input-user-tel letter-input">
-            <input type="text" class="letter-input-user-name letter-input">
-            <textarea class="letter-input-user-message letter-input"></textarea>
+            <input type="tel" class="letter-input-user-tel letter-input" placeholder="Ваш телефон">
+
+            <input type="text" class="letter-input-user-name letter-input" placeholder="Ваше имя">
+
+            <textarea class="letter-input-user-message letter-input" placeholder="Ваше сообщение"></textarea>
             <input type="submit" class="letter-input-submit ">
         </form>
     </section>
