--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </header>
     <section class="section-letter">
         <h2 class="section-letter-head">ПИСЬМО ЛИЧНО ДИРЕКТОРУ</h2>
-        <form class="letter" action="#" method="post">
+        <form class="letter" action="#" method="#">
             <input type="tel" class="letter-input-user-tel letter-input" placeholder="Ваш телефон">
 
             <input type="text" class="letter-input-user-name letter-input" placeholder="Ваше имя">
